--- a/js/themes/blue/style.css
+++ b/js/themes/blue/style.css
@@ -12,7 +12,7 @@ table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 	background-color: #d3f4d3;
 	border: 1px solid transparent;
 	font-size: 1em;
-	padding: 4px;
+	/*padding: 4px;*/
 	font-weight: 400;
 }
 table.tablesorter thead tr .header {
